Added breast cancer ensemble learning notebook

--- a/cancer_pred_decision_tree_bagging_boosting.ipynb
+++ b/cancer_pred_decision_tree_bagging_boosting.ipynb
@@ -4198,7 +4198,7 @@
       "source": [
         "Now we have a similar performance than the logistic regression model. The model left us with only false negative which will reduce the number of people impacted by the late cancer treatment. Yet, there are no false positives, in other words, there will be no people taking drugs unnecessarily.\n",
         "\n",
-        "Obs: I am using random state = 0 in order to have similar results every time I run this notebook but the confusion matrix and the model's score may vary slightly."
+        "Obs: I am using random_state = 0 in order to have similar results every time I run this notebook but the confusion matrix and the model's score may vary slightly."
       ]
     },
     {
